test/mutation_analysis/s0396_rotate_function/hafis/ablation_o3_full/mutants/15/result.txt
./test/mutation_analysis/s0396_rotate_function/hafis/ablation_o3_full/mutants/15/Solution.java:26: error: unreachable statement
        return max;
        ^
1 error
